istio/virtualservice/virtualservice.yaml
# school-app-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: school-app-vs-gateway
spec:
  hosts:
  - "schoolservice.student.svc.cluster.local"
  http:
  - match:
    - uri:
        prefix: /

    route:
    - destination:
        host: schoolservice.student.svc.cluster.local
        #resolve to ip of the service
        port:
         number: 8800
